--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   opacity: 0;
 }
 
-.framer-QoxFR.framer-v-1twluhl .framer-avda51 {
+.framer-sRatJ.framer-v-1twluhl .framer-avda51 {
   height: 100vh !important;
 }
 
@@ -82,11 +82,11 @@
 /* pad */
 @media (min-width:810px) and (max-width: 1440px) {
   #home>div>div:nth-child(2)>div:nth-child(1) {
-    animation: l2r 2s 2s 1;
+    animation: l2r 2s 2s 1 !important;
   }
 
   #home>div>div:nth-child(2)>div:nth-child(2) {
-    animation: b2t_pad 1.5s 2.5s 1;
+    animation: b2t_pad 1.5s 2.5s 1 !important;
   }
 }
 
